fix link alignung right

--- a/style.css
+++ b/style.css
@@ -366,6 +366,31 @@ footer {
 .nav-toggle-label span::after { top: 8px; }
 
 @media screen and (max-width: 1400px) {
+    
+.article-left .overlay, .article-right .overlay {
+    font-size: 1em;
+    height: 93%;
+    opacity: 1;
+}
+.article-left .text-side, .article-right .text-side {
+        width: 100%;
+        opacity: 1;
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        transform: translateY(20px);
+        transform: skewX(-20deg);
+        padding: 10px;
+        margin: 0;
+        
+        text-align: center;
+        align-items: center;
+        align-self: center;
+    }
+.article-left .overlay p, .article-right .overlay p{
+    padding: 8px;
+}
+
+}
+@media screen and (max-width: 1200px) {
      .nav-toggle-label {
         display: block;
     }
@@ -404,39 +429,46 @@ footer {
     }
 .article-left .overlay, .article-right .overlay {
     font-size: 1em;
-    height: 93%;
-    opacity: 1;
-}
-.article-left .text-side, .article-right .text-side {
-        width: 100%;
-        opacity: 1;
-        transition: opacity 0.5s ease, transform 0.5s ease;
-        transform: translateY(20px);
-        transform: skewX(-20deg);
-        padding: 10px;
-        margin: 0;
-        
-        text-align: center;
-        align-items: center;
-        align-self: center;
-    }
-.article-left .overlay p, .article-right .overlay p{
-    padding: 8px;
-}
-
-}
-@media screen and (max-width: 1200px) {
-.article-left .overlay, .article-right .overlay {
-    font-size: 1em;
     height: 90%;
     opacity: 1;
 }
 }
 
 @media screen and (max-width: 768px) {
-   
+    .nav-toggle-label {
+        display: block;
+    }
+    header h1{
+        font-size: 1.5em;
+    }
+
+    .nav-toggle-label:hover + nav ul,
+    nav ul:hover {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        position: absolute;
+        right: 0;
+        top: 50px; 
+        background-color: rgba(255, 255, 255, 0.9);
+        width: 100%;
+        text-align: center;
+        padding-top: 10px; 
+    }
+
+    nav ul li {
+        display: block;
+        margin: 10px 0;
+    }
+    a {
+        margin: 0;
+        padding: 0;
+    }
      .article-left, .article-right {
         flex-direction: column;
+        
     }
      .article-left img, .article-right img {
         border-radius: 90%;
@@ -457,17 +489,17 @@ footer {
     .article-left .text-side, .article-right .text-side {
         transform: translateY(20px);
         transform: skewX(0deg);
-        margin-left: 0;
-        
+        margin-left: 0;    
     }
     .article-right {
         flex-direction: column-reverse;
     }
     .article-left .text-side > *, .article-right .text-side > * {
+        text-align: center;
     transform: skewX(0deg); 
     padding: 10px ;
      margin-left: 0;
-
+    flex: auto;
 }
 .article-left .overlay, .article-right .overlay {
     font-size: 1.3em;
@@ -484,4 +516,5 @@ footer {
 @media screen and (max-width: 468px) {
 .article-left .overlay, .article-right .overlay {
     height: 91%;
-}}
+}
+}
